--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
     box-sizing: border-box;
 }
 
+main{
+    margin: 0 auto;
+}
+
 body{
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
