--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 }
 
 *{
-    /* margin: 0;
-    padding: 0; */
+    margin: 0;
+    padding: 0; 
     box-sizing: border-box;
 }
 
@@ -24,7 +24,7 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     background-color: var(--Very-Light-Gray);
-    margin:100px auto;
+    margin: 0 auto;
 }
 
 
@@ -39,13 +39,13 @@ h1{
     font-size: 33px;
     color:var(--Very-Dark-Blue);
     text-align: center;
-    margin-bottom: -25px;
+    margin-bottom: px;
     margin-top: 50px;
 }
 
 h2{
     font-weight: 600;
-    font-size: 33px;
+    font-size: 34px;
     color:var(--Very-Dark-Blue);
 }
 
@@ -55,11 +55,11 @@ h3{
 
 p{
     color: var(--Grayish-Blue);
-    font-size: 13px;
+    font-size: 14px;
 }
 
 header h2{
-    margin-bottom: -5px;
+    margin-bottom: 20px;
 }
 
 .cards{
@@ -87,9 +87,11 @@ header h2{
 }
 
 .card .image{
+    margin-top: 25px;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
+    padding: 15px;
 }
 
 
