--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
 
 header{
     text-align: center;
-    margin: auto;
+    margin: 0 auto;
     max-width: 480px;
 }
 
@@ -40,7 +40,7 @@ h1{
     color:var(--Very-Dark-Blue);
     text-align: center;
     margin-bottom: px;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 h2{
@@ -59,13 +59,13 @@ p{
 }
 
 header h2{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .cards{
     display: flex;
     flex-wrap: wrap;
-    margin: 50px auto;
+    margin: 40px auto;
     justify-content: center;
     align-items: center;
     max-width: 1200px;
